// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLeadBlock tests should not render technical Specification tab 1`] = `
<div>
  <div
    class="css-1xf8n4r"
    data-testid="tabs"
  >
    <div
      class="Tabs-tabsBar"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-1ozv57h-MuiContainer-root"
        >
          <div
            class="MuiTabs-root css-6wm242-MuiTabs-root"
          >
            <div
              class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="KeyboardArrowLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-agdkjh-MuiTabs-scrollbarSize"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-one"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected Tabs-tabRoot css-7sdbr4-MuiButtonBase-root-MuiTab-root"
                  data-gtm="{"id":"selector-tabs4","label":"MC: sdp.leadBlock.about","action":"Selector – Tabs"}"
                  data-testid="tab-one"
                  id="tab-one"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  MC: sdp.leadBlock.about
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="MuiTabs-indicator css-tv859c-MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="KeyboardArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-one"
      class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
      data-testid="tab-panel-lead-block-about"
      heading="MC: sdp.leadBlock.about"
      id="tabpanel-one"
      role="tabpanel"
    >
      <div
        class="Section-root Section-white css-10chrh8"
        data-testid="tab-system-about-lead-block-section"
      >
        <div
          class=" css-ze8cyt"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-oqlz5y-MuiGrid2-root"
              data-testid="grid-container"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
                data-testid="grid-item"
              >
                <div
                  class="css-1yjvs5a"
                >
                  <div
                    class="MuiTypography-root MuiTypography-body1 AboutLeadBlock-description css-1o02bdp-MuiTypography-root"
                    data-testid="typography"
                  >
                    system-desc
                  </div>
                </div>
                <div
                  class="css-1yjvs5a"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-j6gfrn-MuiTypography-root"
                    data-testid="guarentees-section"
                  >
                    MC: pdp.leadBlock.guaranteesWarranties
                  </h6>
                  <img
                    alt="asset-name"
                    class="AboutLeadBlock-image"
                    data-testid="guarantee-image-asset-name"
                    src="http://localhost:8000/asset-real-file-name.pdf"
                  />
                </div>
                <div
                  class="css-1yjvs5a"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-j6gfrn-MuiTypography-root"
                    data-testid="awards-section"
                  >
                    MC: pdp.leadBlock.awardsCertificates
                  </h6>
                  <img
                    alt="asset-name"
                    class="AboutLeadBlock-image"
                    src="http://localhost:8000/asset-real-file-name.pdf"
                  />
                  <img
                    alt="asset-name"
                    class="AboutLeadBlock-image"
                    src="http://localhost:8000/asset-real-file-name.pdf"
                  />
                </div>
                <div
                  class="css-1yjvs5a"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-j6gfrn-MuiTypography-root"
                    data-testid="specification-section"
                  >
                    MC: sdp.leadBlock.specification
                  </h6>
                  <a
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"cta-click1","label":"asset-name","action":"http://localhost:8000/asset-real-file-name.pdf"}"
                    data-testid="specification-button"
                    href="http://localhost:8000/asset-real-file-name.pdf"
                    rel="noopener noreferrer"
                    tabindex="0"
                    target="_blank"
                  >
                    asset-name
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="LaunchIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-4 MuiGrid2-grid-xs-12 Grid-item css-1fx28h6-MuiGrid2-root"
                data-testid="sidebar"
              >
                <div
                  class="ColorPair-pearl css-1pt14k0"
                >
                  <div
                    class="css-1qwqwtx"
                  >
                    <div
                      class="css-c1wgmr"
                    >
                      <h4
                        class="MuiTypography-root MuiTypography-h4 Typography-underline css-16mi5sh-MuiTypography-root"
                        data-testid="typography"
                      >
                        MC: sdp.leadBlock.systemBenefits
                      </h4>
                      <div
                        class="css-eler5f"
                      >
                        <ul
                          class="css-1yuf2q3"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabLeadBlock tests should render 1`] = `
<div>
  <div
    class="css-1xf8n4r"
    data-testid="tabs"
  >
    <div
      class="Tabs-tabsBar"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-1ozv57h-MuiContainer-root"
        >
          <div
            class="MuiTabs-root css-6wm242-MuiTabs-root"
          >
            <div
              class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="KeyboardArrowLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-agdkjh-MuiTabs-scrollbarSize"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-one"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected Tabs-tabRoot css-7sdbr4-MuiButtonBase-root-MuiTab-root"
                  data-gtm="{"id":"selector-tabs4","label":"MC: sdp.leadBlock.about","action":"Selector – Tabs"}"
                  data-testid="tab-one"
                  id="tab-one"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  MC: sdp.leadBlock.about
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-two"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-tabRoot css-7sdbr4-MuiButtonBase-root-MuiTab-root"
                  data-gtm="{"id":"selector-tabs4","label":"MC: sdp.leadBlock.technicalSpecification","action":"Selector – Tabs"}"
                  data-testid="tab-two"
                  id="tab-two"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  MC: sdp.leadBlock.technicalSpecification
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-three"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-tabRoot css-7sdbr4-MuiButtonBase-root-MuiTab-root"
                  data-gtm="{"id":"selector-tabs4","label":"MC: sdp.leadBlock.documentsAndDownloads","action":"Selector – Tabs"}"
                  data-testid="tab-three"
                  id="tab-three"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  MC: sdp.leadBlock.documentsAndDownloads
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="MuiTabs-indicator css-tv859c-MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="KeyboardArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-one"
      class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
      data-testid="tab-panel-lead-block-about"
      heading="MC: sdp.leadBlock.about"
      id="tabpanel-one"
      role="tabpanel"
    >
      <div
        class="Section-root Section-white css-10chrh8"
        data-testid="tab-system-about-lead-block-section"
      >
        <div
          class=" css-ze8cyt"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-oqlz5y-MuiGrid2-root"
              data-testid="grid-container"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
                data-testid="grid-item"
              >
                <div
                  class="css-1yjvs5a"
                >
                  <div
                    class="MuiTypography-root MuiTypography-body1 AboutLeadBlock-description css-1o02bdp-MuiTypography-root"
                    data-testid="typography"
                  >
                    system-desc
                  </div>
                </div>
                <div
                  class="css-1yjvs5a"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-j6gfrn-MuiTypography-root"
                    data-testid="guarentees-section"
                  >
                    MC: pdp.leadBlock.guaranteesWarranties
                  </h6>
                  <img
                    alt="asset-name"
                    class="AboutLeadBlock-image"
                    data-testid="guarantee-image-asset-name"
                    src="http://localhost:8000/asset-real-file-name.pdf"
                  />
                </div>
                <div
                  class="css-1yjvs5a"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-j6gfrn-MuiTypography-root"
                    data-testid="awards-section"
                  >
                    MC: pdp.leadBlock.awardsCertificates
                  </h6>
                  <img
                    alt="asset-name"
                    class="AboutLeadBlock-image"
                    src="http://localhost:8000/asset-real-file-name.pdf"
                  />
                  <img
                    alt="asset-name"
                    class="AboutLeadBlock-image"
                    src="http://localhost:8000/asset-real-file-name.pdf"
                  />
                </div>
                <div
                  class="css-1yjvs5a"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-j6gfrn-MuiTypography-root"
                    data-testid="specification-section"
                  >
                    MC: sdp.leadBlock.specification
                  </h6>
                  <a
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"cta-click1","label":"asset-name","action":"http://localhost:8000/asset-real-file-name.pdf"}"
                    data-testid="specification-button"
                    href="http://localhost:8000/asset-real-file-name.pdf"
                    rel="noopener noreferrer"
                    tabindex="0"
                    target="_blank"
                  >
                    asset-name
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="LaunchIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-4 MuiGrid2-grid-xs-12 Grid-item css-1fx28h6-MuiGrid2-root"
                data-testid="sidebar"
              >
                <div
                  class="ColorPair-pearl css-1pt14k0"
                >
                  <div
                    class="css-1qwqwtx"
                  >
                    <div
                      class="css-c1wgmr"
                    >
                      <h4
                        class="MuiTypography-root MuiTypography-h4 Typography-underline css-16mi5sh-MuiTypography-root"
                        data-testid="typography"
                      >
                        MC: sdp.leadBlock.systemBenefits
                      </h4>
                      <div
                        class="css-eler5f"
                      >
                        <ul
                          class="css-1yuf2q3"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-two"
      class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
      data-testid="tab-panel-lead-block-technical-specification"
      heading="MC: sdp.leadBlock.technicalSpecification"
      hidden=""
      id="tabpanel-two"
      role="tabpanel"
    >
      <div
        class="Section-root Section-white css-10chrh8"
        data-testid="tab-system-tech-spec-lead-block-section"
      >
        <div
          class=" css-ze8cyt"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-1y2mitp-MuiGrid2-root"
              data-testid="grid-container"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
                data-testid="grid-item"
              >
                <div
                  class="css-1yjvs5a"
                >
                  <div
                    data-testid="technical-specification-classifications-table-wrapper"
                  >
                    <div
                      class="css-1oyez8m"
                    >
                      <table
                        class="MuiTable-root Table-evenColor css-wsrw3a-MuiTable-root"
                        data-testid="table"
                      >
                        <thead
                          class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
                          data-testid="table-head"
                        >
                          <tr
                            class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
                          >
                            <th
                              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                              scope="col"
                            >
                              appearanceAttributes
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                              scope="col"
                            />
                          </tr>
                        </thead>
                        <tbody
                          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                        >
                          <tr
                            class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
                            >
                              classification-feature-name
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
                            >
                              classification-feature-value
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-three"
      class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
      data-testid="tab-panel-lead-block-documents-and-downloads"
      heading="MC: sdp.leadBlock.documentsAndDownloads"
      hidden=""
      id="tabpanel-three"
      role="tabpanel"
    >
      <div
        class="css-fh28tm"
      >
        <div
          class="css-eler5f"
        >
          <div>
            <div
              class="SystemDetailsLeadDocumentsBlockSectionStyles-tableContainer"
            >
              <div
                class="DocumentSimpleTableResults css-358n7x"
                data-testid="document-simple-table-results"
              >
                <div
                  class="css-1oyez8m"
                >
                  <table
                    class="MuiTable-root Table-rowNoColor css-wsrw3a-MuiTable-root"
                    data-testid="table"
                  >
                    <thead
                      class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
                      data-testid="table-head"
                    >
                      <tr
                        class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
                      >
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader documentSimpleTableResultsStyles-tableHeaderCentered css-1tbee56-MuiTableCell-root"
                          scope="col"
                        >
                          <div
                            class="MuiFormControl-root css-1r7uzi1-MuiFormControl-root"
                          >
                            <label
                              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                            >
                              <span
                                aria-label="MC: documentLibrary.headers.add"
                                class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                                data-testid="document-table-select-all"
                              >
                                <input
                                  class="PrivateSwitchBase-input css-1m9pwf3"
                                  data-indeterminate="false"
                                  name="add"
                                  type="checkbox"
                                  value="false"
                                />
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                  data-testid="CheckBoxOutlineBlankIcon"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                  />
                                </svg>
                                <span
                                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                />
                              </span>
                            </label>
                          </div>
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                          scope="col"
                        >
                          MC: documentLibrary.headers.type
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                          scope="col"
                        >
                          MC: documentLibrary.headers.title
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                          scope="col"
                        >
                          MC: documentLibrary.headers.size
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader css-1tbee56-MuiTableCell-root"
                          scope="col"
                        >
                          MC: documentLibrary.headers.actions
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                    >
                      <tr
                        class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
                        data-testid="document-table-row-pim-link-document-id"
                      >
                        <td
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-hsmwoy-MuiTableCell-root"
                          data-testid="document-table-add-pim-link-document-id"
                        >
                          <div
                            class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
                          >
                            <label
                              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                            >
                              <span
                                class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                              >
                                <input
                                  aria-label="MC: documentLibrary.download pim-link-document-title"
                                  class="PrivateSwitchBase-input css-1m9pwf3"
                                  data-indeterminate="false"
                                  name="pim-link-document-id-pim-link-document-title"
                                  type="checkbox"
                                />
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                  data-testid="CheckBoxOutlineBlankIcon"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                  />
                                </svg>
                                <span
                                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                />
                              </span>
                            </label>
                          </div>
                        </td>
                        <td
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
                          data-testid="document-table-type-pim-link-document-id"
                        >
                          asset-name
                        </td>
                        <td
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-ggd0b4-MuiTableCell-root"
                          data-testid="document-table-title-pim-link-document-id"
                        >
                          <a
                            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium  css-186oh1r-MuiButtonBase-root-MuiButton-root"
                            data-gtm="{"id":"download1","label":"Download","action":"http://localhost/pim-link-document-id"}"
                            data-testid="document-table-download-application/pdf-button"
                            href="http://localhost/pim-link-document-id"
                            rel="noopener noreferrer"
                            tabindex="0"
                            target="_blank"
                          >
                            <span
                              class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                            >
                              <svg
                                class="download-icon css-z6lod7"
                                fill="none"
                                viewBox="0 0 48 48"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M30.776 5H12.54v37.997H42v-27.14L30.775 5z"
                                  fill="#AEB1B1"
                                />
                                <path
                                  d="M13.945 41.64V6.357H30.78v9.5h9.82V41.64H13.944z"
                                  fill="#fff"
                                />
                                <rect
                                  fill="#D43533"
                                  height="14"
                                  rx="1"
                                  width="30"
                                  x="6"
                                  y="23"
                                />
                                <path
                                  d="M11 26h2.916c.496 0 .92.072 1.272.216.352.144.64.336.864.576.232.232.4.504.504.816.112.312.168.636.168.972 0 .432-.076.812-.228 1.14-.144.32-.344.588-.6.804-.248.216-.536.38-.864.492-.328.112-.672.168-1.032.168h-1.236v2.82H11V26zm2.82 3.72c.336 0 .6-.1.792-.3.2-.208.3-.476.3-.804 0-.336-.1-.608-.3-.816-.2-.216-.468-.324-.804-.324h-1.044v2.244h1.056zM17.637 26h3.024c.617 0 1.186.08 1.706.24.527.16.98.404 1.355.732.386.328.68.748.89 1.26.216.512.323 1.116.323 1.812 0 .664-.107 1.244-.323 1.74-.216.488-.517.9-.9 1.236-.377.328-.83.576-1.357.744-.52.16-1.088.24-1.704.24h-3.012V26zm2.916 6.396c.8 0 1.416-.208 1.848-.624.434-.424.65-1.004.65-1.74 0-.368-.053-.7-.157-.996-.096-.304-.248-.56-.456-.768-.2-.216-.456-.38-.768-.492-.313-.12-.685-.18-1.117-.18H19.45v4.8h1.104zM25.88 26h5.377v1.596H27.69v1.812h2.712v1.548h-2.712v3.048h-1.81V26z"
                                  fill="#fff"
                                />
                              </svg>
                            </span>
                            <p
                              class="css-1cigd93"
                            >
                              pim-link-document-title
                            </p>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </a>
                        </td>
                        <td
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
                          data-testid="document-table-size-pim-link-document-id"
                        >
                          10 B
                        </td>
                        <td
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
                          data-testid="document-table-actions-pim-link-document-id"
                        >
                          <div
                            class="css-1kto1mf"
                          >
                            <div
                              aria-label="MC: document.library.download.tooltip.title"
                              class=""
                              data-mui-internal-clone-element="true"
                              data-testid="tooltip"
                            >
                              <a
                                aria-label="Download pim-link-document-title"
                                class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-1vk2tp6-MuiButtonBase-root-MuiIconButton-root"
                                data-gtm="{"id":"download1","label":"Download","action":"http://localhost/pim-link-document-id"}"
                                data-testid="document-table-actions-download-pim-link-document-id"
                                href="http://localhost/pim-link-document-id"
                                rel="noopener noreferrer"
                                tabindex="0"
                                target="_blank"
                              >
                                <svg
                                  class="document-simple-table-results-actionIconSmall css-afm3c7"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                                    fill="currentColor"
                                  />
                                </svg>
                                <span
                                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                />
                              </a>
                            </div>
                            <div
                              aria-label="MC: document.library.copyLink.tooltip.title"
                              class="MuiBox-root css-mvc5fa"
                              data-mui-internal-clone-element="true"
                              data-testid="tooltip"
                            >
                              <button
                                aria-label="Copy pim-link-document-title"
                                class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-1vk2tp6-MuiButtonBase-root-MuiIconButton-root"
                                data-testid="document-table-actions-copy-url-pim-link-document-id"
                                tabindex="0"
                                type="button"
                              >
                                <svg
                                  class="document-simple-table-results-actionIconSmall css-afm3c7"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M15.0786 3.99902H6.86837C6.11356 4.0012 5.50221 4.6036 5.5 5.34736V14.7857H6.86837V5.34736H15.0786V3.99902ZM17.1327 6.69556H9.60665C8.85184 6.69794 8.24049 7.35835 8.23828 8.17373V18.5209C8.24049 19.3363 8.85184 19.9967 9.60665 19.9991H17.1327C17.8875 19.9967 18.4989 19.3363 18.5011 18.5209V8.17373C18.4989 7.35835 17.8875 6.69794 17.1327 6.69556ZM17.1315 18.521H9.60547V8.17383H17.1315V18.521Z"
                                  />
                                </svg>
                                <span
                                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                />
                              </button>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
                        data-testid="document-table-row-pim-link-document-id"
                      >
                        <td
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-hsmwoy-MuiTableCell-root"
                          data-testid="document-table-add-pim-link-document-id"
                        >
                          <div
                            class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
                          >
                            <label
                              class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                            >
                              <span
                                aria-disabled="true"
                                class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                                tabindex="-1"
                              >
                                <input
                                  aria-label="MC: documentLibrary.download pim-link-document-title"
                                  class="PrivateSwitchBase-input css-1m9pwf3"
                                  data-indeterminate="false"
                                  disabled=""
                                  name="pim-link-document-id-pim-link-document-title"
                                  type="checkbox"
                                />
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                  data-testid="CheckBoxOutlineBlankIcon"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                  />
                                </svg>
                              </span>
                            </label>
                          </div>
                        </td>
                        <td
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
                          data-testid="document-table-type-pim-link-document-id"
                        >
                          asset-name
                        </td>
                        <td
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-ggd0b4-MuiTableCell-root"
                          data-testid="document-table-title-pim-link-document-id"
                        >
                          <a
                            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium  css-186oh1r-MuiButtonBase-root-MuiButton-root"
                            data-testid="document-table-external-link-button"
                            href="http://localhost/pim-link-document-id"
                            rel="noopener noreferrer"
                            tabindex="0"
                            target="_blank"
                          >
                            <span
                              class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                            >
                              <svg
                                class="css-bwy9pl"
                                fill="none"
                                viewBox="0 0 48 48"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M39.43 6H16.285L6 16.286V39.43c.004 1.417 1.153 2.566 2.57 2.57h30.86c1.417-.004 2.566-1.153 2.57-2.57V8.57c-.004-1.417-1.153-2.566-2.57-2.57zm-5.297 10.98l-8.95 8.95-3.097-3.1 8.95-8.948-4.026-4.025 11.122.013.013 11.122-4.012-4.012z"
                                  fill="#0072B0"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <p
                              class="css-1cigd93"
                            >
                              pim-link-document-title
                            </p>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </a>
                        </td>
                        <td
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
                          data-testid="document-table-size-pim-link-document-id"
                        >
                          -
                        </td>
                        <td
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
                          data-testid="document-table-actions-pim-link-document-id"
                        >
                          <div
                            class="css-1kto1mf"
                          >
                            <div
                              aria-label="MC: document.library.copyLink.tooltip.title"
                              class="MuiBox-root css-mvc5fa"
                              data-mui-internal-clone-element="true"
                              data-testid="tooltip"
                            >
                              <button
                                aria-label="Copy pim-link-document-title"
                                class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-1vk2tp6-MuiButtonBase-root-MuiIconButton-root"
                                data-testid="document-table-actions-copy-url-pim-link-document-id"
                                tabindex="0"
                                type="button"
                              >
                                <svg
                                  class="document-simple-table-results-actionIconSmall css-afm3c7"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M15.0786 3.99902H6.86837C6.11356 4.0012 5.50221 4.6036 5.5 5.34736V14.7857H6.86837V5.34736H15.0786V3.99902ZM17.1327 6.69556H9.60665C8.85184 6.69794 8.24049 7.35835 8.23828 8.17373V18.5209C8.24049 19.3363 8.85184 19.9967 9.60665 19.9991H17.1327C17.8875 19.9967 18.4989 19.3363 18.5011 18.5209V8.17373C18.4989 7.35835 17.8875 6.69794 17.1327 6.69556ZM17.1315 18.521H9.60547V8.17383H17.1315V18.521Z"
                                  />
                                </svg>
                                <span
                                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                />
                              </button>
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
            <div
              class="css-x2mpkr"
              data-testid="document-results-footer"
            >
              <div
                class="MuiBox-root css-h5fkc8"
              >
                <div
                  class="css-10h4yv9"
                >
                  <div
                    class="css-179cxs2"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Mui-disabled MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-11nrv4h-MuiButtonBase-root-MuiButton-root"
                      data-gtm="{"id":"download3-button1","label":"MC: downloadList.download","action":"[]"}"
                      data-testid="document-table-download-button"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      MC: downloadList.download
                    </button>
                    <button
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Mui-disabled MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-xc55i5-MuiButtonBase-root-MuiButton-root"
                      data-testid="document-results-footer-reset-button"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      MC: downloadList.clear
                    </button>
                  </div>
                </div>
                <p
                  class="MuiTypography-root MuiTypography-body1 documentResultsFooter-recaptcha css-aoter2-MuiTypography-root"
                  data-testid="document-results-footer-recaptcha"
                >
                  This site is protected by reCAPTCHA and the Google 
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
                    data-testid="recaptcha-privacy-policy-link"
                    href="https://policies.google.com/privacy"
                    rel="noreferrer noopener"
                    target="_blank"
                  >
                    <span>
                      Privacy Policy
                    </span>
                  </a>
                   and 
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
                    data-testid="recaptcha-terms-of-service-link"
                    href="https://policies.google.com/terms"
                    rel="noreferrer noopener"
                    target="_blank"
                  >
                    <span>
                      Terms of Service
                    </span>
                  </a>
                   apply.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabLeadBlock tests should render documents and downloads 1`] = `
<div
  aria-labelledby="tab-three"
  class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
  data-testid="tab-panel-lead-block-documents-and-downloads"
  heading="MC: sdp.leadBlock.documentsAndDownloads"
  hidden=""
  id="tabpanel-three"
  role="tabpanel"
>
  <div
    class="css-fh28tm"
  >
    <div
      class="css-eler5f"
    >
      <div>
        <div
          class="SystemDetailsLeadDocumentsBlockSectionStyles-tableContainer"
        >
          <div
            class="DocumentSimpleTableResults css-358n7x"
            data-testid="document-simple-table-results"
          >
            <div
              class="css-1oyez8m"
            >
              <table
                class="MuiTable-root Table-rowNoColor css-wsrw3a-MuiTable-root"
                data-testid="table"
              >
                <thead
                  class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
                  data-testid="table-head"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader documentSimpleTableResultsStyles-tableHeaderCentered css-1tbee56-MuiTableCell-root"
                      scope="col"
                    >
                      <div
                        class="MuiFormControl-root css-1r7uzi1-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                        >
                          <span
                            aria-label="MC: documentLibrary.headers.add"
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                            data-testid="document-table-select-all"
                          >
                            <input
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              name="add"
                              type="checkbox"
                              value="false"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </span>
                        </label>
                      </div>
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                      scope="col"
                    >
                      MC: documentLibrary.headers.type
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                      scope="col"
                    >
                      MC: documentLibrary.headers.title
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                      scope="col"
                    >
                      MC: documentLibrary.headers.size
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader css-1tbee56-MuiTableCell-root"
                      scope="col"
                    >
                      MC: documentLibrary.headers.actions
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
                    data-testid="document-table-row-pim-link-document-id"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-hsmwoy-MuiTableCell-root"
                      data-testid="document-table-add-pim-link-document-id"
                    >
                      <div
                        class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              aria-label="MC: documentLibrary.download pim-link-document-title"
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              name="pim-link-document-id-pim-link-document-title"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </span>
                        </label>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
                      data-testid="document-table-type-pim-link-document-id"
                    >
                      asset-name
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-ggd0b4-MuiTableCell-root"
                      data-testid="document-table-title-pim-link-document-id"
                    >
                      <a
                        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium  css-186oh1r-MuiButtonBase-root-MuiButton-root"
                        data-gtm="{"id":"download1","label":"Download","action":"http://localhost/pim-link-document-id"}"
                        data-testid="document-table-download-application/pdf-button"
                        href="http://localhost/pim-link-document-id"
                        rel="noopener noreferrer"
                        tabindex="0"
                        target="_blank"
                      >
                        <span
                          class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                        >
                          <svg
                            class="download-icon css-z6lod7"
                            fill="none"
                            viewBox="0 0 48 48"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M30.776 5H12.54v37.997H42v-27.14L30.775 5z"
                              fill="#AEB1B1"
                            />
                            <path
                              d="M13.945 41.64V6.357H30.78v9.5h9.82V41.64H13.944z"
                              fill="#fff"
                            />
                            <rect
                              fill="#D43533"
                              height="14"
                              rx="1"
                              width="30"
                              x="6"
                              y="23"
                            />
                            <path
                              d="M11 26h2.916c.496 0 .92.072 1.272.216.352.144.64.336.864.576.232.232.4.504.504.816.112.312.168.636.168.972 0 .432-.076.812-.228 1.14-.144.32-.344.588-.6.804-.248.216-.536.38-.864.492-.328.112-.672.168-1.032.168h-1.236v2.82H11V26zm2.82 3.72c.336 0 .6-.1.792-.3.2-.208.3-.476.3-.804 0-.336-.1-.608-.3-.816-.2-.216-.468-.324-.804-.324h-1.044v2.244h1.056zM17.637 26h3.024c.617 0 1.186.08 1.706.24.527.16.98.404 1.355.732.386.328.68.748.89 1.26.216.512.323 1.116.323 1.812 0 .664-.107 1.244-.323 1.74-.216.488-.517.9-.9 1.236-.377.328-.83.576-1.357.744-.52.16-1.088.24-1.704.24h-3.012V26zm2.916 6.396c.8 0 1.416-.208 1.848-.624.434-.424.65-1.004.65-1.74 0-.368-.053-.7-.157-.996-.096-.304-.248-.56-.456-.768-.2-.216-.456-.38-.768-.492-.313-.12-.685-.18-1.117-.18H19.45v4.8h1.104zM25.88 26h5.377v1.596H27.69v1.812h2.712v1.548h-2.712v3.048h-1.81V26z"
                              fill="#fff"
                            />
                          </svg>
                        </span>
                        <p
                          class="css-1cigd93"
                        >
                          pim-link-document-title
                        </p>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </a>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
                      data-testid="document-table-size-pim-link-document-id"
                    >
                      10 B
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
                      data-testid="document-table-actions-pim-link-document-id"
                    >
                      <div
                        class="css-1kto1mf"
                      >
                        <div
                          aria-label="MC: document.library.download.tooltip.title"
                          class=""
                          data-mui-internal-clone-element="true"
                          data-testid="tooltip"
                        >
                          <a
                            aria-label="Download pim-link-document-title"
                            class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-1vk2tp6-MuiButtonBase-root-MuiIconButton-root"
                            data-gtm="{"id":"download1","label":"Download","action":"http://localhost/pim-link-document-id"}"
                            data-testid="document-table-actions-download-pim-link-document-id"
                            href="http://localhost/pim-link-document-id"
                            rel="noopener noreferrer"
                            tabindex="0"
                            target="_blank"
                          >
                            <svg
                              class="document-simple-table-results-actionIconSmall css-afm3c7"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                                fill="currentColor"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </a>
                        </div>
                        <div
                          aria-label="MC: document.library.copyLink.tooltip.title"
                          class="MuiBox-root css-mvc5fa"
                          data-mui-internal-clone-element="true"
                          data-testid="tooltip"
                        >
                          <button
                            aria-label="Copy pim-link-document-title"
                            class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-1vk2tp6-MuiButtonBase-root-MuiIconButton-root"
                            data-testid="document-table-actions-copy-url-pim-link-document-id"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              class="document-simple-table-results-actionIconSmall css-afm3c7"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.0786 3.99902H6.86837C6.11356 4.0012 5.50221 4.6036 5.5 5.34736V14.7857H6.86837V5.34736H15.0786V3.99902ZM17.1327 6.69556H9.60665C8.85184 6.69794 8.24049 7.35835 8.23828 8.17373V18.5209C8.24049 19.3363 8.85184 19.9967 9.60665 19.9991H17.1327C17.8875 19.9967 18.4989 19.3363 18.5011 18.5209V8.17373C18.4989 7.35835 17.8875 6.69794 17.1327 6.69556ZM17.1315 18.521H9.60547V8.17383H17.1315V18.521Z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
                    data-testid="document-table-row-pim-link-document-id"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-hsmwoy-MuiTableCell-root"
                      data-testid="document-table-add-pim-link-document-id"
                    >
                      <div
                        class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="true"
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                            tabindex="-1"
                          >
                            <input
                              aria-label="MC: documentLibrary.download pim-link-document-title"
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              disabled=""
                              name="pim-link-document-id-pim-link-document-title"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
                      data-testid="document-table-type-pim-link-document-id"
                    >
                      asset-name
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-ggd0b4-MuiTableCell-root"
                      data-testid="document-table-title-pim-link-document-id"
                    >
                      <a
                        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium  css-186oh1r-MuiButtonBase-root-MuiButton-root"
                        data-testid="document-table-external-link-button"
                        href="http://localhost/pim-link-document-id"
                        rel="noopener noreferrer"
                        tabindex="0"
                        target="_blank"
                      >
                        <span
                          class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                        >
                          <svg
                            class="css-bwy9pl"
                            fill="none"
                            viewBox="0 0 48 48"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M39.43 6H16.285L6 16.286V39.43c.004 1.417 1.153 2.566 2.57 2.57h30.86c1.417-.004 2.566-1.153 2.57-2.57V8.57c-.004-1.417-1.153-2.566-2.57-2.57zm-5.297 10.98l-8.95 8.95-3.097-3.1 8.95-8.948-4.026-4.025 11.122.013.013 11.122-4.012-4.012z"
                              fill="#0072B0"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <p
                          class="css-1cigd93"
                        >
                          pim-link-document-title
                        </p>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </a>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
                      data-testid="document-table-size-pim-link-document-id"
                    >
                      -
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
                      data-testid="document-table-actions-pim-link-document-id"
                    >
                      <div
                        class="css-1kto1mf"
                      >
                        <div
                          aria-label="MC: document.library.copyLink.tooltip.title"
                          class="MuiBox-root css-mvc5fa"
                          data-mui-internal-clone-element="true"
                          data-testid="tooltip"
                        >
                          <button
                            aria-label="Copy pim-link-document-title"
                            class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-1vk2tp6-MuiButtonBase-root-MuiIconButton-root"
                            data-testid="document-table-actions-copy-url-pim-link-document-id"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              class="document-simple-table-results-actionIconSmall css-afm3c7"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.0786 3.99902H6.86837C6.11356 4.0012 5.50221 4.6036 5.5 5.34736V14.7857H6.86837V5.34736H15.0786V3.99902ZM17.1327 6.69556H9.60665C8.85184 6.69794 8.24049 7.35835 8.23828 8.17373V18.5209C8.24049 19.3363 8.85184 19.9967 9.60665 19.9991H17.1327C17.8875 19.9967 18.4989 19.3363 18.5011 18.5209V8.17373C18.4989 7.35835 17.8875 6.69794 17.1327 6.69556ZM17.1315 18.521H9.60547V8.17383H17.1315V18.521Z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <div
          class="css-x2mpkr"
          data-testid="document-results-footer"
        >
          <div
            class="MuiBox-root css-h5fkc8"
          >
            <div
              class="css-10h4yv9"
            >
              <div
                class="css-179cxs2"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Mui-disabled MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-11nrv4h-MuiButtonBase-root-MuiButton-root"
                  data-gtm="{"id":"download3-button1","label":"MC: downloadList.download","action":"[]"}"
                  data-testid="document-table-download-button"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  MC: downloadList.download
                </button>
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Mui-disabled MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-xc55i5-MuiButtonBase-root-MuiButton-root"
                  data-testid="document-results-footer-reset-button"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  MC: downloadList.clear
                </button>
              </div>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 documentResultsFooter-recaptcha css-aoter2-MuiTypography-root"
              data-testid="document-results-footer-recaptcha"
            >
              This site is protected by reCAPTCHA and the Google 
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
                data-testid="recaptcha-privacy-policy-link"
                href="https://policies.google.com/privacy"
                rel="noreferrer noopener"
                target="_blank"
              >
                <span>
                  Privacy Policy
                </span>
              </a>
               and 
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
                data-testid="recaptcha-terms-of-service-link"
                href="https://policies.google.com/terms"
                rel="noreferrer noopener"
                target="_blank"
              >
                <span>
                  Terms of Service
                </span>
              </a>
               apply.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabLeadBlock tests should render the bimIframe tab 1`] = `
<div
  aria-labelledby="tab-four"
  class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
  data-testid="tab-panel-lead-block-bim"
  heading="MC: sdp.tabs.bim"
  hidden=""
  id="tabpanel-four"
  role="tabpanel"
>
  <div>
    <div
      class="Section-root Section-pearl css-10chrh8"
      data-testid="tab-system-bim-lead-block-section"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-1y2mitp-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
              data-testid="grid-item"
            >
              <h2
                class="MuiTypography-root MuiTypography-h2 Typography-underline css-8cj2y3-MuiTypography-root"
                data-testid="typography"
              >
                BIM_CODE
              </h2>
              <div
                class="css-1yjvs5a"
              />
            </div>
            <iframe
              class="css-busmfs"
              data-testid="bmi-iframe"
              src="http://nowhere.com"
              title="BIM_CODE"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
